autotests/syntax-tests-simple-refal/tests/negative/negative150.sref
Name { Name Name , Name Name : Name ( Name ) [ Name ] = ; ,
{ } { ( ( ) e.Var Name # Name 'chars' 123 ) Name $EXTERN , :
{ } : , : = : = ; = ; } Name : { } : , : = : = ; = ; } ; 